# turnt

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  turnt.py
.github/workflows/: ci.yml  test.yml
test/: args.out  hello.out  hello.t  turnt.toml
test/basic/: args.t  bad.t  cmd.out  cmd.t  multi-output.t  todo.out  todo.t
test/binary/: bin.t  turnt.toml
test/dirtest/: turnt.toml
test/dirtest/bar.t/: opts.txt  out.out  test.in
test/dirtest/foo.t/: out.out
test/errors/: bad.out  bad.t  turnt.toml
test/multi-output/: turnt.toml
test/multienv/: something.out  something.out3  something.t  turnt.toml
test/out-dir/: turnt.toml
test/out-dir/expected/: something.out
test/subdir/: example.out
turnt/: __init__.py  __main__.py  config.py  run.py
