[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "turnt"
author = "Adrian Sampson"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/cucapra/turnt"
description-file = "README.md"
requires-python = ">=3.6"
requires = [
    "click",
    "tomlkit",
]

[tool.flit.scripts]
turnt = "turnt:turnt"

[tool.mypy]
files = ["turnt.py"]
disallow_untyped_calls = true
disallow_untyped_defs = true
