[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "turnt"
author = "Adrian Sampson"
author-email = "asampson@cs.cornell.edu"
home-page = "https://github.com/cucapra/turnt"
description-file = "README.md"
requires-python = ">=3.6"
requires = [
    "tomli >= 1.1.0 ; python_version < \"3.11\"",
]

[tool.flit.scripts]
turnt = "turnt:turnt"

[tool.mypy]
files = ["turnt"]
disallow_untyped_calls = true
disallow_untyped_defs = true
